ações eventos de click adicionadas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <section class="form_section">
         <h2>Inserir tarefa</h2>
-        <form>
+        <form id="mainForm">
           <div>
             <input
               id="input_title"
@@ -38,7 +38,7 @@
               <option value="Normal">Normal</option>
             </select>
           </div>
-          <button id="btnSubmit">Adicionar Tarefa na Lista</button>
+          <button type="submit" id="btnSubmit">Adicionar Tarefa na Lista</button>
         </form>
       </section>
 
